# rag_agent_video_text_context

./: README.md  my_langgraph_chain.py
backend/: .env.example  .gitignore  data.py  main.py  pyproject.toml  rag.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Chat.css  Chat.jsx  History.css  History.jsx  MainInputField.css  MainInputField.jsx  Message.css  Message.jsx  Messages.css  Messages.jsx  SidebarButton.css  SidebarButton.jsx
frontend/src/hooks/: useAutoScroll.jsx
frontend/src/utils/: sidebar.jsx
