[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "build==1.3.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "chromadb==1.3.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "deepgram-sdk==5.3.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "durationpy==0.10",
    "easyocr==1.7.2",
    "email-validator==2.3.0",
    "fastapi==0.123.10",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.6.0",
    "fastar==0.8.0",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.2.1",
    "humanfriendly==10.0",
    "idna==3.11",
    "imageio==2.37.2",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kubernetes==34.1.0",
    "langchain==1.1.2",
    "langchain-chroma==1.0.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.1.1",
    "langchain-openai==1.1.0",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.14",
    "langsmith==0.4.56",
    "lazy-loader==0.4",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "networkx==3.6",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==2.9.0",
    "opencv-python==4.12.0.88",
    "opencv-python-headless==4.12.0.88",
    "opentelemetry-api==1.39.0",
    "opentelemetry-exporter-otlp-proto-common==1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.0",
    "opentelemetry-proto==1.39.0",
    "opentelemetry-sdk==1.39.0",
    "opentelemetry-semantic-conventions==0.60b0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pillow==12.0.0",
    "posthog==5.4.0",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pyclipper==1.4.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rich-toolkit==0.17.0",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "scikit-image==0.25.2",
    "scipy==1.16.3",
    "sentry-sdk==2.47.0",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tifffile==2025.10.16",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.3.0",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
